--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.4",
+    "http-debug": "^0.1.2",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.17"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
